--- a/snippets/header.html
+++ b/snippets/header.html
@@ -25,15 +25,15 @@
           <div class="dropdown">
             <button class="dropbtn">Narzędzia</button>
             <div class="dropdown-content">
-              <a onclick="notLogged()">Dodaj Polityka</a>
-              <a onclick="notLogged()">Dodaj Partie</a>
-              <a onclick="notLogged()">Dodaj Komitet</a>
+              <a href="php/login.php" onclick="notLogged()">Dodaj Polityka</a>
+              <a href="php/login.php" onclick="notLogged()">Dodaj Partie</a>
+              <a href="php/login.php" onclick="notLogged()">Dodaj Komitet</a>
             </div>
           </div> 
     
           <div class="login">
             <div class="dropdown">
-              <img src="/assets/img/ikona.ico">
+              <img src="..//assets/login.png">
                 <div class="dropdown-content">
                   <a href="/php/login.php">Zaloguj się</a>
                   <a href="/php/registration.php">Zarejestruj się</a>
@@ -41,4 +41,8 @@
               </div>
           </div>
         </div>
+
+        <script src="../js/log-alert.js"></script>
+
     </header>
+    
