mnóstwo rzeczy generalnie

--- a/snippets/header-logged.html
+++ b/snippets/header-logged.html
@@ -35,7 +35,7 @@
             <div class="dropdown">
               <img src="..//assets/login.png">
                 <div class="dropdown-content">
-                  <a href="../php/logout.php">Wyloguj się</a>
+                  <a href="/symulacja-polityki/logout.php">Wyloguj się</a>
                 </div>
               </div>
           </div>
