nie zdążymy w terminie!

--- a/snippets/header-logged.html
+++ b/snippets/header-logged.html
@@ -25,9 +25,9 @@
           <div class="dropdown">
             <button class="dropbtn">Narzędzia</button>
             <div class="dropdown-content">
-              <a href="../forms/polityk.php">Dodaj Polityka</a>
-              <a href="../forms/partia.php">Dodaj Partie</a>
-              <a href="../forms/komitet.php">Dodaj Komitet</a>
+              <a href="/symulacja-polityki/forms/polityk.php">Dodaj Polityka</a>
+              <a href="/symulacja-polityki/forms/partia.php">Dodaj Partie</a>
+              <a href="/symulacja-polityki/forms/komitet.php">Dodaj Komitet</a>
             </div>
           </div> 
     
