Usless informatyk poprawia błędy dla ludzi, którzy umieją lepiej niż on

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -25,9 +25,9 @@
           <div class="dropdown">
             <button class="dropbtn">Narzędzia</button>
             <div class="dropdown-content">
-              <a href="php/login.php" onclick="notLogged()">Dodaj Polityka</a>
-              <a href="php/login.php" onclick="notLogged()">Dodaj Partie</a>
-              <a href="php/login.php" onclick="notLogged()">Dodaj Komitet</a>
+              <a href="forms/user.php" onclick="notLogged()">Dodaj Polityka</a>
+              <a href="forms/user.php" onclick="notLogged()">Dodaj Partie</a>
+              <a href="forms/user.php" onclick="notLogged()">Dodaj Komitet</a>
             </div>
           </div> 
     
@@ -35,8 +35,8 @@
             <div class="dropdown">
               <img src="..//assets/login.png">
                 <div class="dropdown-content">
-                  <a href="/php/login.php">Zaloguj się</a>
-                  <a href="/php/registration.php">Zarejestruj się</a>
+                  <a href="/forms/user.php">Zaloguj się</a>
+                  <a href="/forms/user-registration.php">Zarejestruj się</a>
                 </div>
               </div>
           </div>
