--- a/snippets/header.html
+++ b/snippets/header.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="../css/style.css">
-
     <header>
         <div class="header_content">
           <div class="title">
@@ -25,9 +23,9 @@
           <div class="dropdown">
             <button class="dropbtn">Narzędzia</button>
             <div class="dropdown-content">
-              <a href="./forms/polityk.php" onclick="notLogged()">Dodaj Polityka</a>
-              <a href="./forms/partia.php" onclick="notLogged()">Dodaj Partie</a>
-              <a href="./forms/komitet.php" onclick="notLogged()">Dodaj Komitet</a>
+              <a href="./forms/polityk.php" onclick="notLogged(event)">Dodaj Polityka</a>
+              <a href="./forms/partia.php" onclick="notLogged(event)">Dodaj Partie</a>
+              <a href="./forms/komitet.php" onclick="notLogged(event)">Dodaj Komitet</a>
             </div>
           </div> 
     
