poprawiono pierniczone ścieżki

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -23,24 +23,24 @@
           <div class="dropdown">
             <button class="dropbtn">Narzędzia</button>
             <div class="dropdown-content">
-              <a href="forms/user.php" onclick="notLogged()">Dodaj Polityka</a>
-              <a href="forms/user.php" onclick="notLogged()">Dodaj Partie</a>
-              <a href="forms/user.php" onclick="notLogged()">Dodaj Komitet</a>
+              <a href="/symulacja-polityki/forms/user.php" onclick="notLogged(event)">Dodaj Polityka</a>
+              <a href="/symulacja-polityki/forms/user.php" onclick="notLogged(event)">Dodaj Partie</a>
+              <a href="/symulacja-polityki/forms/user.php" onclick="notLogged(event)">Dodaj Komitet</a>
             </div>
           </div> 
     
           <div class="login">
             <div class="dropdown">
-              <img src="./assets/login.png">
+              <img src="/symulacja-polityki/assets/login.png">
                 <div class="dropdown-content">
-                  <a href="/forms/user.php">Zaloguj się</a>
-                  <a href="/forms/user-registration.php">Zarejestruj się</a>
+                  <a href="/symulacja-polityki/forms/user.php">Zaloguj się</a>
+                  <a href="/symulacja-polityki/forms/user-registration.php">Zarejestruj się</a>
                 </div>
               </div>
           </div>
         </div>
 
-        <script src="./js/log-alert.js"></script>
+        <script src="/symulacja-polityki/js/log-alert.js"></script>
 
     </header>
     
