GIGA DUŻO RZECZY

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -14,9 +14,8 @@
           <div class="dropdown">
             <button class="dropbtn">Listy</button>
             <div class="dropdown-content">
-              <a href="about:blank">Lista Polityków</a>
-              <a href="about:blank">Lista Partii</a>
-              <a href="about:blank">Lista Komitetów</a>
+              <a href="/symulacja-polityki/listy/politycy.php">Lista Polityków</a>
+              <a href="/symulacja-polityki/listy/partie.php">Lista Partii</a>
             </div>
           </div>
     
@@ -25,7 +24,6 @@
             <div class="dropdown-content">
               <a href="/symulacja-polityki/forms/user.php" onclick="notLogged(event)">Dodaj Polityka</a>
               <a href="/symulacja-polityki/forms/user.php" onclick="notLogged(event)">Dodaj Partie</a>
-              <a href="/symulacja-polityki/forms/user.php" onclick="notLogged(event)">Dodaj Komitet</a>
             </div>
           </div> 
     
