--- a/snippets/header-logged.html
+++ b/snippets/header-logged.html
@@ -14,9 +14,8 @@
       <div class="dropdown">
         <button class="dropbtn">Listy</button>
         <div class="dropdown-content">
-          <a href="about:blank">Lista Polityków</a>
-          <a href="about:blank">Lista Partii</a>
-          <a href="about:blank">Lista Komitetów</a>
+          <a href="/symulacja-polityki/listy/politycy.php">Lista Polityków</a>
+          <a href="/symulacja-polityki/listy/partie.php">Lista Partii</a>
         </div>
       </div>
 
@@ -25,9 +24,9 @@
         <div class="dropdown-content">
           <a href="/symulacja-polityki/forms/polityk.php">Dodaj Polityka</a>
           <a href="/symulacja-polityki/forms/partia.php">Dodaj Partie</a>
-          <a href="/symulacja-polityki/forms/komitet.php">Dodaj Komitet</a>
         </div>
       </div> 
+      <a href="/symulacja-polityki/php/symulacja.php">Symuluj!</a>
 
       <div class="login">
         <div class="dropdown">
