--- a/snippets/header.html
+++ b/snippets/header.html
@@ -9,7 +9,7 @@
     
         <div class="menu">
           <div class="menu_content">
-            <a href="../index.php">Strona Główna</a>
+            <a href="/symulacja-polityki/index.php">Strona Główna</a>
     
           <div class="dropdown">
             <button class="dropbtn">Listy</button>
